--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,7 +14,7 @@
   --section-title-color: #ff0070;
   --article-title-color: #000028;
   --theme-menu-color: #ff0070;
-  --theme-menu-border-color: #ff0070;
   --lamp-display: block;
   --decorative-element-color: #ff0070;
+  --theme-menu-border-color: rgb(255, 0, 112, 0.4);
 }
