--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,8 @@
   font-family: var(--main-font, "IBM Plex mono"), sans-serif;
   font-size: var(--main-font-size);
   background-color: var(--bg-color);
-  background-position: center;
+  background-position:top;
+  background-image: var(--bg-image);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -11,10 +12,7 @@
 
 .header {
   display: grid;
-  grid-template-rows: min-content min-content min-content;
-  background-image: var(--bg-image);
-  background-size: cover;
-  background-position: center;
+  grid-template-rows: 1fr min-content 1fr;
   block-size: 100vh;
   min-block-size: 668px;
   margin-block-end: 10px;
@@ -55,13 +53,13 @@
   font-size: var(--logo-size);
   color: var(--title-color);
   line-height: 82.5%;
-  margin-block-start: 65px;
+  margin-block-start: 55px;
   margin-block-end: 55px;
   padding-inline: var(--padding-inline);
   max-width: 355px;
 }
 .header__theme-menu {
-  margin-block-start: 75px;
+  margin-block-start: 65px;
   align-self: center;
   justify-self: end;
   padding-inline: var(--padding-inline);
@@ -91,7 +89,7 @@
 }
 .header__theme-menu-button:hover {
   border: solid 1px;
-  border-color: var(theme-menu-border);
+  border-color: var(--theme-menu-border-color);
 }
 
 .header__theme-menu-button:focus {
@@ -117,9 +115,10 @@
   background-size: cover;
   line-height: 23.4px;
   margin-inline: var(--padding-inline);
+  height: fit-content;
 }
 
-.header::after {
+.decorated-zone::after {
   content: "  ";
   border: solid 1px;
   width: 25px;
@@ -132,7 +131,7 @@
   left: var(--padding-inline);
 }
 
-.header::before {
+.decorated-zone::before {
   content: "  ";
   border: solid 1px;
   width: 25px;
@@ -170,9 +169,11 @@
 .article__title {
   margin-block-start: 20px;
   margin-block-end: 10px;
-
   font-weight: var(--font-weight-bold);
   font-size: var(--main-font-size);
+}
+.article__title.no-bold {
+  font-weight: var(--font-weight-normal);
 }
 
 .article__title.no-margin {
@@ -204,7 +205,10 @@
   gap: 10px;
 }
 .gallery__image {
-  max-width: 100%;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
 }
 .footer {
   position: relative;
@@ -221,35 +225,10 @@
   font-size: var(--logo-size);
   color: var(--title-color);
   line-height: 82.5%;
-  margin-block: 285px;
-}
-
-.footer::after {
-  content: "  ";
-  border: solid 1px;
-  width: 25px;
-  height: 25px;
-  border-right: 0;
-  border-top: 0;
-  color: var(--decorative-element-color);
-  position: absolute;
-  bottom: var(--padding-inline);
-  left: var(--padding-inline);
-}
-.footer::before {
-  content: "  ";
-  border: solid 1px;
-  width: 25px;
-  height: 25px;
-  border-left: 0;
-  border-bottom: 0;
-  color: var(--decorative-element-color);
-  position: absolute;
-  top: var(--padding-inline);
-  right: var(--padding-inline);
+  justify-self: center;
 }
 a:hover {
-  text-decoration: underline;
+  border-bottom: solid 2px;
 }
 a:focus {
   border: solid 1px;
@@ -306,18 +285,18 @@ a:focus-visible {
     margin-block-start: 0px;
     margin-block-end: 20px;
   }
-  .section__2nd {
+  .section__causes {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     margin-block-start: 30px;
     margin-block-end: 80px;
   }
-  .section__2nd-title {
+  .section__causes-title {
     margin-inline-end: 512px;
   }
 
-  .section__3rd {
+  .section__tips {
     margin-block-end: 80px;
   }
 
@@ -326,11 +305,6 @@ a:focus-visible {
     grid-template-rows: auto;
     gap: 20px;
     margin-block: 20px;
-  }
-  .gallery__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
   .image__sunset {
     grid-column: span 2;
@@ -375,7 +349,7 @@ a:focus-visible {
     margin-block-start: 114px;
     margin-inline-start: 513px;
   }
-  .section__1st {
+  .section__why {
     gap: 10px;
   }
   .article__title {
@@ -385,17 +359,17 @@ a:focus-visible {
     margin-block-end: 10px;
   }
 
-  .section__2nd {
+  .section__causes {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row: auto;
     margin-block-start: 20px;
   }
-  .section__2nd-title {
+  .section__causes-title {
     margin-inline-end: 689px;
     grid-column: span 3;
   }
-  .section__3rd {
+  .section__tips {
     gap: 10px;
     margin-block-end: 70px;
   }
