--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,7 +10,6 @@
   --font-weight-bold: 700;
   --logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --padding-inline: 10px;
-  --bg-color: #000028;
   --accent-color: #ff0070;
   --title-color: #db00ff;
   --text-color: #f1b2ce;
@@ -19,7 +18,7 @@
   --section-title-color: #ff0070;
   --article-title-color: #000028;
   --theme-menu-color: #ff0070;
-  --theme-menu-border-color: #ff0070;
+  --theme-menu-border-color: rgb(255, 0, 112, 0.4);
   --lamp-display: block;
   --decorative-element-color: #ff0070;
 }
